<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StocksApp</string>
    <string name="app_tag">Pretty_Pony</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_top_or_bottom10">TopOrBottom10Activity</string>
    <string name="home">Home</string>
    <string name="top10">Top 10</string>
    <string name="bottom10">Bottom 10</string>
    <string name="title_activity_top_pickofthe_day">TopPickoftheDayActivity</string>
    <string name="topPickoftheDay">Top Pic of the Day</string>
    <string name="companyName">[Company Name]</string>
    <string name="zero">0.00</string>
    <string name="previousDayClosure">Previous Day Closure:</string>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="buy">Buy</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="compare">Compare</string>
    <string name="shortTerm">Short Term</string>
    <string name="longTerm">Long Term</string>
    <string name="oneMonth">30 Days</string>
    <string name="sixMonths">180 Days</string>
    <string name="oneYear">365 Days</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="appSettings">Application Settings</string>
    <string name="title_activity_compare">CompareActivity</string>
    <string name="restore">Restore Defaults</string>
    <string name="searchCaption">Please Enter Stock Symbol</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_buy_sell_links">BuySellLinksActivity</string>
    <string name="add">Add New Link</string>
    <string name="remove">Remove Link</string>
    <string name="scorecard">View Scorecard</string>

</resources>